revise validateCyclesThroughNegations to fix infinite looping & false positives